tests/failing/vrot.tail
let v1:S(int,13) = prSclI(13) in
let v2:S(int,13) = prSclI(13) in
let v3:S(int,13) = prSclI(13) in
let v4:<int>3 = prArrI([2,3,1]) in
let v5:<int>3 = prArrI([2,3,1]) in
let v6:<int>3 = prArrI([3,1,2]) in
let v7:<int>3 = prArrI([1,2,3]) in
let v8:[int]2 = reshape{[int],[1,2]}([3,4],iotaV(9)) in
let v9:[int]2 = prArrI(vrotate{[int],[2]}(1,v8)) in
let v10:[int]2 = prArrI(vrotate{[int],[2]}(4,v8)) in
let v11:[int]2 = prArrI(vrotate{[int],[2]}(~1,v8)) in
let v12:[int]2 = prArrI(vrotate{[int],[2]}(~4,v8)) in
let v13:[int]2 = prArrI(vrotate{[int],[2]}(0,v8)) in
let v14:<int>0 = prArrI(vrotateV(~2,zilde)) in
let v15:<int>0 = prArrI(vrotateV(11,zilde)) in
let v16:<int>0 = prArrI(zilde) in
let v17:[int]2 = prArrI(vrotate{[int],[2]}(12,take{[int],[2]}(0,v8))) in
0.00
